update image directory

--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -95,7 +95,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="We're Turning 10! (1).png" class="d-block w-100" alt="background">
+          <img src="../We're Turning 10! (1).png" class="d-block w-100" alt="background">
           <div class="carousel-caption">
             <h1>One page promising to <br> fill all your needs!</h1>
             <p>This is Photoshop's version of Lorem Ipsum. Proin <br> gravida nibh vel velit auctor aliquet.</p>
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="We're Turning 10!.png" class="d-block w-100" alt="background">
+          <img src="../We're Turning 10!.png" class="d-block w-100" alt="background">
           <div class="carousel-caption">
             <h1>One page promising to <br> fill all your needs!</h1>
             <p>This is Photoshop's version of Lorem Ipsum. Proin <br> gravida nibh vel velit auctor aliquet.</p>
