update final draft

--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -192,7 +192,7 @@
             <h1 class="heading">Projects</h1>
             <div class="row mt-5">
               <div class="col-md-3 col-12 p_container mx-auto">
-                <img src="1.png" alt="Project1" class="img-fluid">
+                <img src="img/1.png" alt="Project1" class="img-fluid">
                 <div class="p_description">
                   <h5>Project Name</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vet odio vet felis placerat pharetra ut vitae felis</p>
@@ -200,7 +200,7 @@
                 </div>
               </div>
               <div class="col-md-3 col-12 p_container mx-auto">
-                <img src="2.png" alt="Project1" class="img-fluid">
+                <img src="img/2.png" alt="Project1" class="img-fluid">
                 <div class="p_description">
                   <h5>Project Name</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vet odio vet felis placerat pharetra ut vitae felis</p>
@@ -208,7 +208,7 @@
                 </div>
               </div>
               <div class="col-md-3 col-12 p_container mx-auto">
-                <img src="3.png" alt="Project1" class="img-fluid">
+                <img src="img/3.png" alt="Project1" class="img-fluid">
                 <div class="p_description">
                   <h5>Project Name</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vet odio vet felis placerat pharetra ut vitae felis</p>
@@ -216,7 +216,7 @@
                 </div>
               </div>
               <div class="col-md-3 col-12 p_container mx-auto">
-                <img src="4.png" alt="Project1" class="img-fluid">
+                <img src="img/4.png" alt="Project1" class="img-fluid">
                 <div class="p_description">
                   <h5>Project Name</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vet odio vet felis placerat pharetra ut vitae felis</p>
@@ -306,7 +306,7 @@
             <h1 class="heading">Zippy Team</h1>
             <div class="row mt-5">
               <div class="col-md-4 col-11 mx-auto text-center card_container">
-                <img src="monica.png" alt="Person1" class="img-fluid image">
+                <img src="img/monica.png" alt="Person1" class="img-fluid image">
                 <div class="social_icons">
                   <i class="fab fa-facebook"></i>
                   <i class="fab fa-instagram"></i>
@@ -316,7 +316,7 @@
                 <p>The camera adds 10 pounds.</p>
               </div>
               <div class="col-md-4 col-11 mx-auto text-center card_container">
-                <img src="rachel.png" alt="Person2" class="img-fluid image">
+                <img src="img/rachel.png" alt="Person2" class="img-fluid image">
                 <div class="social_icons">
                   <i class="fab fa-facebook"></i>
                   <i class="fab fa-instagram"></i>
@@ -326,7 +326,7 @@
                 <p>No Uterus. No Opinion.</p>
               </div>
               <div class="col-md-4 col-11 mx-auto text-center card_container">
-                <img src="phoebe.png" alt=" Person3" class="img-fluid image">
+                <img src="img/phoebe.png" alt=" Person3" class="img-fluid image">
                 <div class="social_icons">
                   <i class="fab fa-facebook"></i>
                   <i class="fab fa-instagram"></i>
@@ -336,7 +336,7 @@
                 <p>I dont even have a pla'</p>
               </div>
               <div class="col-md-4 col-11 mx-auto text-center card_container">
-                <img src="ross.png" alt="Person4" class="img-fluid image">
+                <img src="img/ross.png" alt="Person4" class="img-fluid image">
                 <div class="social_icons">
                   <i class="fab fa-facebook"></i>
                   <i class="fab fa-instagram"></i>
@@ -346,7 +346,7 @@
                 <p>We were on a Break</p>
               </div>
               <div class="col-md-4 col-11 mx-auto text-center card_container">
-                <img src="joey.png" alt="Person5" class="img-fluid image">
+                <img src="img/joey.png" alt="Person5" class="img-fluid image">
                 <div class="social_icons">
                   <i class="fab fa-facebook"></i>
                   <i class="fab fa-instagram"></i>
@@ -356,7 +356,7 @@
                 <p>How you Doin'?</p>
               </div>
               <div class="col-md-4 col-11 mx-auto text-center card_container">
-                <img src="chandler.png" alt="Person6" class="img-fluid image">
+                <img src="img/chandler.png" alt="Person6" class="img-fluid image">
                 <div class="social_icons">
                   <i class="fab fa-facebook"></i>
                   <i class="fab fa-instagram"></i>
@@ -378,23 +378,23 @@
   <h2 class="heading">Life in ZIPPY</h2>
     
 
-    <img id=featured style="height: 1300px;" src="all (6).png">
+    <img id=featured style="height: 1300px;" src="img/all (6).png">
     <br>
 
     <div id="slide-wrapper">
-        <img id="slideLeft" class="arrow" src="arrow (2).png">
+        <img id="slideLeft" class="arrow" src="img/arrow (2).png">
 
         <div id="slider">
-            <img class="thumbnail active" src="all (2).png">
-            <img class="thumbnail" style="width: 4rem" src="all (1).png">
-            <img class="thumbnail" src="all (3).png">
+            <img class="thumbnail active" src="img/all (2).png">
+            <img class="thumbnail" style="width: 4rem" src="img/all (1).png">
+            <img class="thumbnail" src="img/all (3).png">
 
-            <img class="thumbnail" src="all (4).png">
-            <img class="thumbnail" src="all (5).png">
+            <img class="thumbnail" src="img/all (4).png">
+            <img class="thumbnail" src="img/all (5).png">
          
         </div>
 
-        <img id="slideRight" class="arrow" src="arrow (1).png">
+        <img id="slideRight" class="arrow" src="img/arrow (1).png">
     </div>
     <br>
   </div>
@@ -405,7 +405,7 @@
       <div class="container-fluid py-5">
         <div class="row">
           <div class="col-md-12 col-12 mx-auto">
-            <img class=bitch src="NEWSLETTER.png" alt="Newsletter">
+            <img class=bitch src="img/NEWSLETTER.png" alt="Newsletter">
             <h1 class="newsletter">Newsletter Signup</h1>
             <div style="top:50cm;" class="input_signup">
               <input class=baz type="text" placeholder="abc@example.com"><button class="bar">Sign Up</button>
@@ -423,21 +423,21 @@
             <h1 class="heading">Blog</h1>
             <div class="row mt-5">
               <div class="col-md-4 col-11 mx-auto text-center mt-3">
-                <img src="blog1.png" alt="Blog" class="img-fluid image">
+                <img src="img/blog1.png" alt="Blog" class="img-fluid image">
                 <h5>Lorem Ipsum Dolor <br> Sit Ammet</h5>
                 <p>15 Jan, 2015</p>
                 <p style="color: black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vet odio vet felis placerat pharetra ut vitae felis</p>
                 <button type="button" class="btn btn-warning" >Read more</button>
               </div>
               <div class="col-md-4 col-11 mx-auto text-center mt-3">
-                <img src="blog2.png" alt="Blog" class="img-fluid image">
+                <img src="img/blog2.png" alt="Blog" class="img-fluid image">
                 <h5>Lorem Ipsum Dolor <br> Sit Ammet</h5>
                 <p>15 Jan, 2015</p>
                 <p style="color: black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vet odio vet felis placerat pharetra ut vitae felis</p>
                 <button type="button" class="btn btn-warning" >Read more</button>
               </div>
               <div class="col-md-4 col-11 mx-auto text-center mt-3">
-                <img src="blog3.png" alt="Blog" class="img-fluid image">
+                <img src="img/blog3.png" alt="Blog" class="img-fluid image">
                 <h5>Lorem Ipsum Dolor <br> Sit Ammet</h5>
                 <p>15 Jan, 2015</p>
                 <p style="color: black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vet odio vet felis placerat pharetra ut vitae felis</p>
