--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -58,24 +58,24 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li>
-              <a  class="nav-link" href="#home">HOME </a>
+              <a style="color: pink;" class="nav-link" href="#home">HOME </a>
               
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#project">PROJECTS</a>
+              <a style="color: pink;" class="nav-link" href="#project">PROJECTS</a>
                
             </li>
             <li class="nav-item">
-              <a  class="nav-link" href="#pricing">PRICING</a>
+              <a style="color: pink;" class="nav-link" href="#pricing">PRICING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#team">TEAM</a>
+              <a style="color: pink;" class="nav-link" href="#team">TEAM</a>
             </li>
             <li class="nav-item">
-              <a  class="nav-link" href="#blog">BLOG</a>
+              <a style="color: pink;" class="nav-link" href="#blog">BLOG</a>
             </li>
             <li class="nav-item">
-              <a  class="nav-link" href="#contact">CONTACT</a>
+              <a style="color: pink;" class="nav-link" href="#contact">CONTACT</a>
             </li>
 
           </ul>
